# automatic-sortition

./: .gitignore  README.md  automatic_sortition.py  pyproject.toml
criteria/: criteria.json
data/: volunteers.xlsx
results/: output.xlsx
