[tool.poetry]
name = "automatic-sortition"
version = "0.1.0"
description = ""
authors = ["Konrad Jervell (Analyse & Tall SA)"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
xlsxwriter = "^3.1.2"
polars = "^1.14.0"
xlsx2csv = "^0.8.2"
fastexcel = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
